[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features  = ["full"] }
futures = "0.3"
serde = "1.0.159"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "macros", "uuid", "json", "postgres"] }
anyhow = "1.0.58"
serde_json = "1.0.95"
tower-http = { version = "0.4.0", features = ["trace"] }

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
